tests/unterminated_function.err.out
error: unterminated_function.err.li 2,1: unexpected token `eof`, expecting `r_brace`
    2 | 
      | ^
